fix: global CORS configuration for mobile and web development